fixed map touch on mobile view

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -168,10 +168,12 @@
 		}
 	}
 
-	@include mobile {	
+	@include mobile {
+		pointer-events: none;
 		width: 100%;
 		
 		.list-wrapper {
+			pointer-events: auto;
 			height: calc(100% - 40px);
 			margin-top: 40px;
 			width: 100%;
